--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -244,7 +244,8 @@ img {
     display: flex;
     grid-template-columns: 1fr 1fr;
     grid-gap: 30px;
-    padding: 20px;
+    margin: auto;
+    padding: 30px;
 }
 
 
